# Advanced-Metaheuristics-LSGO

./: README.md
Algorithms ELSGO/MOS-CEC2013/src.long_double/problems/Scheduling/: CMakeLists.txt  scheduling.cc
Algorithms ELSGO/MOS-CEC2013/src.long_double/problems/cec2005/: CMakeLists.txt  benchmarks.c  cec2005.cc  cec2005.cfg.template  functions.c  rand.c  utils.c
Algorithms ELSGO/MOS-CEC2013/src.long_double/problems/cec2011/: CMakeLists.txt  aux.h  mCEC_Function.cc  mCEC_Function.h  template.cc
Algorithms ELSGO/MOS-CEC2013/src.long_double/problems/soco2010/: CMakeLists.txt  aux.cc  f12.cc  f13.cc  f14.cc
Algorithms ELSGO/MOS-CEC2013/src/problems/: CMakeLists.txt  SAT.cc  SAT_4blocks.c  SATnew.cc  branin.cc  fssmessy.cc  fullydeceptive.cc  shekel.cc
Algorithms ELSGO/MOS-CEC2013/src/problems/Scheduling/: scheduling.cc
Algorithms ELSGO/MOS-CEC2013/src/problems/bbob2010/: benchmarks.cc  benchmarksdeclare.cc  benchmarksdeclare.h  benchmarksnoisy.cc  experiment.cc  fgeneric.cc  mos.cc  mos.h  mos_algorithm.cc  mos_algorithm.h  timing.cc
Algorithms ELSGO/MOS-CEC2013/src/problems/bbp/: CMakeLists.txt
Algorithms ELSGO/MOS-CEC2013/src/problems/cec2005/: aux.c  global.h  initialize.c  rand.h
Algorithms ELSGO/MOS-CEC2013/src/problems/cec2008/: schwefel_problem.h  shifted_ackley.h  shifted_rastrigin.h  shifted_sphere.h  (+2 more)
Algorithms ELSGO/MOS-CEC2013/src/utils/: CMakeLists.txt  prueba_ls.cc
Algorithms-ELSGO/MOS-SOCO2010/: AUTHORS  CMakeCache.txt  CMakeLists.txt  COPYRIGHT  EEG_D4results.txt  GAEDALib.cbp  LICENSE  LICENSE.GALib  Makefile  README  cmake_install.cmake  soco2010.cfg  techs_soco.cfg
Algorithms-ELSGO/MOS-SOCO2010/cec2012/: Benchmarks.cpp  CMakeLists.txt  F1.cpp  F1.h  F10.h  F11.cpp  F11.h  F12.cpp  F12.h  F13.cpp  F15.cpp  F15.h  F16.h  F17.cpp  F18.cpp  F19.cpp  F2.cpp  F20.cpp  F20.h  F3.h  F5.cpp  F7.cpp  F7.h  F8.h  F9.cpp  Makefile  cmake_install.cmake  f19.cc  template.cc
Algorithms-ELSGO/MOS-SOCO2010/cec2013_lsgo/: CEC2013LSGOWrapper.cc  CEC2013LSGOWrapper.h  Makefile  cec2013_funcs.cc  cmake_install.cmake  load_data.h  template_matlab.cc  testCEC2013LSGO_Matlab.cc
Algorithms-ELSGO/MOS-SOCO2010/cec2013_lsgo/matlab/: benchmark_func.m
Algorithms-ELSGO/MOS-SOCO2010/exp_cec2012/: run_cec2012.sh
Algorithms-ELSGO/MOS-SOCO2010/exp_cec2013/: run_cec2013.sh
Algorithms-ELSGO/MOS-SOCO2010/exp_soco2010/: run_eegProblemD12.sh  run_eegProblemD19.sh  run_eegProblemD4.sh  run_soco2010.sh
Algorithms-ELSGO/MOS-SOCO2010/exp_soco2010/res/: logfile-egg_problemD12-0  logfile-egg_problemD12.out  logfile-egg_problemD4-0  logfile-egg_problemD4.out
Algorithms-ELSGO/MOS-SOCO2010/gaeda/: Algorithm.cc  Algorithm.h  CMakeLists.txt  ConfigFileParser.h  DEElitism.cc  GACommonOps.h  GAEDAConfig.cc  GAEDAConfig.h  GAEDAlib.h  GAGeneticAlgorithm.cc  GAGeneticAlgorithm.h  GAPopulation.cc  GAPopulation.h  GARealOps.cc  GARealOps.h  GASelector.cc  GASelector.h  GAStatistics.cc  LSElitism.cc  MOSConfig.cc  MOSConfig.h  MOSConversionFunc.h  MOSDefineProblem.h  MOSEA.cc  MOSEA.h  MOSGenomeFactory.cc  MOSParticipationFunction.cc  MOSParticipationFunction.h  MOSQualityFunction.cc  MOSTechnique.cc  MOSTechnique.h  MOSTechniqueDE.cc  MOSTechniqueDE.h  MOSTechniqueLS.cc  MOSTechniqueLS.h  MOSTechniqueSet.cc  MOSTechniqueSet.h  Makefile  Serializable.h  cmake_install.cmake  (+9 more)
Algorithms-ELSGO/MOS-SOCO2010/gaeda/config/: libconfig.c  libconfigcpp.cc
Algorithms-ELSGO/MOS-SOCO2010/gaeda/extras/: distaux.cc  distaux.h  problemloader.cc  problemloader.h
Algorithms-ELSGO/MOS-SOCO2010/gaeda/genomes/: GA1DArrayGenome.cc  GA1DArrayGenome.h  GAGenome.cc  GAGenome.h  MOSGenome.cc  MOSGenome.h
Algorithms-ELSGO/MOS-SOCO2010/gaeda/islands/: CommManager.cc  CommManager.h
Algorithms-ELSGO/MOS-SOCO2010/gaeda/logger/: CollectionLogStat.cc  CollectionLogStat.h  EvalsLogStat.h  FitnessLogStat.h  GAFileLogger.cc  GAFileLogger.h  GALogger.h  GANullLogger.h  ImprovementsLogStat.cc  ImprovementsLogStat.h  ParticipationLogStat.cc  QualityFuncActiveLogStat.h  QualityLogStat.h  ScoreLogStat.h  SetLogStat.cc  SetLogStat.h  SingleLogStat.cc
Algorithms-ELSGO/MOS-SOCO2010/gaedaexec/: Makefile  cmake_install.cmake  gaedaexec  gaedaexec.cbp  main.cc
Algorithms-ELSGO/MOS-SOCO2010/soco2010/: CMakeLists.txt  Makefile  aux.cc  aux.h  cmake_install.cmake  eeg_problem.cc  eeg_problem.h  f10.cc  f10NoTrans.cc  f10NoTrans.h  f11NoTrans.h  f12.cc  f13.cc  f14.cc  f15.cc  f16.cc  f17.cc  f18.cc  f7.h  f7NoTrans.h  f8.h  f8NoTrans.cc  f8NoTrans.h  f9.cc  loaddata_bigopt.h  schwefel_problem.h  shifted_ackley.cc  shifted_ackley.h  shifted_rastrigin.h  shifted_rosembrock.cc  soco2010.cbp
Algorithms-ELSGO/MOS-SOCO2010/soco2010/DATAin/: D12NS.txt  D12S.txt  D12S1.txt  D12X.txt  D19S.txt  D19S1.txt  D4A.txt  D4NA.txt  D4NS.txt  D4S1.txt  D4X.txt
Algorithms-ELSGO/MOS_CEC2013/src/: CMakeCache.txt  CMakeLists.txt  GAEDALib.cbp  Makefile  cmake_install.cmake
Algorithms-ELSGO/MOS_CEC2013/src/gaeda/: Algorithm.cc  Algorithm.h  GABayesianNetwork.h  GACommonOps.h  GAGaussianNetwork.cc  GAGenealogy.cc  GAGenealogy.h  GAGenealogyMemory.cc  GAGenealogyTracer.cc  GAGenealogyTracer.h  GAGeneticAlgorithm.cc  GAGraphModel.cc  GAIntOps.cc  GAParameter.cc  GAPopulation.h  GARealOps.cc  GARealOps.h  GASelector.cc  GASelector.h  GASimpleGA.cc  GASimpleGA.h  GAStatistics.cc  GASteadyStateGA.cc  GASteadyStateGA.h  IncElitism.cc  IncElitism.h  LSElitism.cc  MOSConfig.cc  MOSConfig.h  MOSConversion.cc  MOSConversionFunc.h  MOSEA.cc  MOSEAMultiDeme.cc  MOSEAMultiDeme.h  MOSEARL.h  MOSQualityFunction.cc  MOSQualityFunction.h  MOSTechniqueAdapDE.cc  MOSTechniqueAdapDE.h  MOSTechniqueAdapSTSDE.cc  (+36 more)
Algorithms-ELSGO/MOS_CEC2013/src/gaedaexec/: CMakeLists.txt  Makefile  cmake_install.cmake  config.cfg.template  main.cc
Algorithms-ELSGO/MOS_CEC2013/src/problems/: CMakeCache.txt  CMakeLists.txt  Makefile  SAT.cc  SATnew.cc  cmake_install.cmake  deceptive-real.cc  fssmessy_no_opt.cc  griewank.cc  maxbitreal.cc  rastrigin.cc  royalroad.cc  schwefel.cc  tsp.cc
Algorithms-ELSGO/MOS_CEC2013/src/utils/: Makefile  cmake_install.cmake  genealogy.cc
(+1869 files in other folders)
